--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
-https://github.com/oberoiUP/APISample/actions/workflows/checkstyle.yaml/badge.svg
-https://github.com/oberoiUP/APISample/actions/workflows/test_weatherAPI.yaml/badge.svg
+[![Check Style](https://github.com/oberoiUP/APISample/actions/workflows/checkstyle.yaml/badge.svg)](https://github.com/oberoiUP/APISample/actions/workflows/checkstyle.yaml)
+[![(Tests](https://github.com/oberoiUP/APISample/actions/workflows/test_weatherAPI.yaml/badge.svg)](https://github.com/oberoiUP/APISample/actions/workflows/test_weatherAPI.yaml)
